--- a/angular.json
+++ b/angular.json
@@ -52,7 +52,7 @@
                             "node_modules/echarts/dist/extension/bmap.min.js",
                             "node_modules/chart.js/dist/Chart.min.js",
                             "node_modules/jquery/dist/jquery.min.js",
-                            "src/assets/js/plate.js",
+                            "src/assets/js/plate.js"
                         ]
                     },
                     "configurations": {
@@ -113,7 +113,7 @@
                             "node_modules/typeface-exo/index.css",
                             "node_modules/roboto-fontface/css/roboto/roboto-fontface.css",
                             "node_modules/ionicons/scss/ionicons.scss",
-                            "node_modules/font-awesome/scss/font-awesome.scss",
+
                             "node_modules/socicon/css/socicon.css",
                             "node_modules/nebular-icons/scss/nebular-icons.scss",
                             "node_modules/pace-js/templates/pace-theme-flash.tmpl.css",
