--- a/package.json
+++ b/package.json
@@ -47,9 +47,12 @@
     "@nebular/security": "4.4.0",
     "@nebular/theme": "4.4.0",
     "@swimlane/ngx-charts": "^10.0.0",
+    "@tensorflow-models/coco-ssd": "^2.0.1",
+    "@tensorflow/tfjs": "^1.5.2",
     "angular-tree-component": "7.2.0",
     "angular2-chartjs": "0.4.1",
     "angular2-toaster": "^7.0.0",
+    "angularfire2": "^5.4.2",
     "bootstrap": "4.3.1",
     "chart.js": "2.7.1",
     "ckeditor": "4.7.3",
@@ -67,6 +70,7 @@
     "ng2-completer": "2.0.8",
     "ng2-smart-table": "1.3.5",
     "ngx-echarts": "^4.0.1",
+    "node-fetch": "^2.6.0",
     "node-sass": "^4.12.0",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
