--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "url": "https://github.com/akveo/ngx-admin/issues"
     },
     "scripts": {
+        "cypress": "cypress open",
         "ng": "ng",
         "conventional-changelog": "conventional-changelog",
         "start": "ng serve",
@@ -54,6 +55,7 @@
         "angular2-toaster": "^7.0.0",
         "angularfire2": "^5.4.2",
         "bootstrap": "4.3.1",
+        "chance": "^1.1.6",
         "chart.js": "2.7.1",
         "ckeditor": "4.7.3",
         "classlist.js": "1.1.20150312",
@@ -101,6 +103,7 @@
         "@types/node": "^8.10.59",
         "codelyzer": "^5.0.1",
         "conventional-changelog-cli": "1.3.4",
+        "cypress": "^4.11.0",
         "jasmine-core": "2.6.4",
         "jasmine-spec-reporter": "4.1.1",
         "karma": "1.7.1",
