--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "@swimlane/ngx-charts": "^10.0.0",
         "@tensorflow-models/coco-ssd": "^2.0.1",
         "@tensorflow/tfjs": "^1.5.2",
+        "acorn": "6.1.0",
         "angular-tree-component": "7.2.0",
         "angular2-chartjs": "0.4.1",
         "angular2-toaster": "^7.0.0",
@@ -119,6 +120,6 @@
         "ts-node": "3.2.2",
         "tslint": "^5.7.0",
         "tslint-language-service": "^0.9.9",
-        "typescript": "^3.4.5"
+        "typescript": "^3.5.3"
     }
 }
